Bug 153244 - Insert - Caption - Options - Separator does not work (resets to previous values)
Summary: Insert - Caption - Options - Separator does not work (resets to previous values)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.2 rc
Hardware: All All
: medium normal
Assignee: Szymon Kłos
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.5.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Fields Caption
  Show dependency treegraph
 
Reported: 2023-01-27 13:53 UTC by sdc.blanco
Modified: 2023-02-23 11:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bug Reproduced (142.67 KB, image/png)
2023-01-29 08:25 UTC, Saravanan U
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2023-01-27 13:53:54 UTC
Insert - Caption - Options - Separator 

 --  could not get it to work

   fx.  1.  Enter Heading 1 (outline level 1)
        2.  Use Tools - Chapter Numbering to give a numbering to Heading 1
        3.  Insert a Frame, then open Insert - Caption - Options.
        4.  Change values for "Level" and "Separator" in the 
            Numbering Captions by Chapter section, then click OK.
        5.  Re-open Options dialog.

Actual:  Values not remembered.
Expected:  Values remembered.

         6.  Insert Caption

Actual:  Cannot add Chapter Number (or separator) before caption number.
Expected:  Can add Chapter number and separator.

Additional Information.

1.  Use Edit Field dialog on the caption sequence number, and enter values for "Level" and "Separator" in the Edit Field dialog.  Now open the Numbering Captions by Chapter" section in the Caption - Options dialog will show (and use) the values that were entered in the "Edit Field" dialog.
Comment 1 Stéphane Guillou (stragu) 2023-01-27 14:22:31 UTC
Reproduced in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 69c6f7bccec838b7288a25a29a83b7f782ba7586
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Same thing for images, not just frames.
Comment 2 Stéphane Guillou (stragu) 2023-01-27 14:34:40 UTC
Not in:

Version: 7.4.5.1 / LibreOffice Community
Build ID: 9c0871452b3918c1019dde9bfac75448afc4b57f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Appeared in 7.5:

Version: 7.5.0.2 (X86_64) / LibreOffice Community
Build ID: c0dd1bc3f1a385d110b88e26ece634da94921f58
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 sdc.blanco 2023-01-27 14:51:46 UTC
Additional query:

What is expected behavior here?

With 7.2.7.2, using the Caption Options dialog to change level and separator also changes all the existing captions (even if no caption is inserted).  I would not expect the "Insert Caption" dialog to have this global effect, especially when the other two options in that dialog only have an effect on the current caption being inserted.

(If the "Numbering Captions by Chapter" option supposed to change all the captions, not only the one being inserted, then maybe this should also be mentioned in the help page.)
Comment 4 Stéphane Guillou (stragu) 2023-01-27 15:50:31 UTC
Bibisected with linux-64-7.5 repo to first bad commit 1da26954c71f739d12829279908826364ab80740 which points to core commit:

commit 4b4e7ac74e2b72833de6b464b25b077b7541f43a
author	Skyler Grey <skyler3665@gmail.com>	Wed Aug 17 13:17:25 2022 +0100
committer	Szymon Kłos <szymon.klos@collabora.com>	Mon Nov 21 11:17:07 2022 +0100
tree 5268beabb99f7fd667f4c841d8b1da2f79d342bf
parent 727141098b7d7bfed65e64d2062042269a8f6088
Make the insert caption options an async jsdialog
Change-Id: I703b66d8c786d8cbb0b1285014247b38d8d70605
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138442

I couldn't find a Bugzilla account for Skyler. Szymon, could you please relay or have a look?
Comment 5 Stéphane Guillou (stragu) 2023-01-27 15:56:08 UTC
(In reply to sdc.blanco from comment #3)
> Additional query:
> 
> What is expected behavior here?
> 
> With 7.2.7.2, using the Caption Options dialog to change level and separator
> also changes all the existing captions (even if no caption is inserted).  I
> would not expect the "Insert Caption" dialog to have this global effect,
> especially when the other two options in that dialog only have an effect on
> the current caption being inserted.
> 
> (If the "Numbering Captions by Chapter" option supposed to change all the
> captions, not only the one being inserted, then maybe this should also be
> mentioned in the help page.)

I strongly agree this should be improved.
I think another bug report should be opened, with the two alternative solutions listed (add to documentation vs some kind of clear UI split between options that apply to the current caption or globally), using the keyword needsUXEval and copying in the UX team. I could not see an existing request.
Comment 6 sdc.blanco 2023-01-27 16:42:31 UTC
(In reply to Stéphane Guillou (stragu) from comment #5)
> I think another bug report should be opened
bug 153248

> with the two alternative solutions listed
Please add to my report, if it did not explain adequately.
Comment 7 Saravanan U 2023-01-29 08:25:12 UTC
Created attachment 184995 [details]
Bug Reproduced

Insert - Caption - Options - Separator 

 --  could not get it to work

   fx.  1.  Enter Heading 1 (outline level 1)
        2.  Use Tools - Chapter Numbering to give a numbering to Heading 1
        3.  Insert a Frame, then open Insert - Caption - Options.
        4.  Change values for "Level" and "Separator" in the 
            Numbering Captions by Chapter section, then click OK.
        5.  Re-open Options dialog.

Actual:  Values not remembered.
Expected:  Values remembered.

         6.  Insert Caption

Actual:  Cannot add Chapter Number (or separator) before caption number.
Expected:  Can add Chapter number and separator.

Enivornment :linux mint 5.15.0-58-generic

Result: Bug Reproduced
Comment 8 Stéphane Guillou (stragu) 2023-01-30 13:55:09 UTC
Saravanan: thanks for confirming the bug.
However, do you intend to submit a patch to fix the issue?
If not, please remove yourself from the "assignee" field as it is used to say "I am currently working on fixing the bug".
Comment 9 Szymon Kłos 2023-02-06 16:29:33 UTC
fix: https://gerrit.libreoffice.org/c/core/+/146590
Comment 10 Commit Notification 2023-02-07 12:13:12 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6a7b3d59d790cb8ea55353fe4173d71a13931d50

tdf#153244 apply caption options

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-02-09 13:04:44 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/efbf1fad61882a52e92b9c4d9d277a5e8c7750ab

tdf#153244 apply caption options

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-02-10 13:47:06 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/797757ac567071f25c1bc30ec7e90d2773a18c67

tdf#153244: sw: Add UItest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-02-22 10:31:19 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-1":

https://git.libreoffice.org/core/commit/dd0247d27624062ba4e39b9efa799f289cf16e6a

tdf#153244 apply caption options

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Stéphane Guillou (stragu) 2023-02-23 11:27:33 UTC
Thank you Seth, Szymon and Xisco! Verified fixed in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 05ac57f85eb622b798719db03bbdd07b79e1703a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded