tdf#153244 apply caption options

Change-Id: I2aa53a85ab9f38ddf74caac85047235ea85a40af
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146590
Tested-by: Jenkins
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
(cherry picked from commit 6a7b3d59d790cb8ea55353fe4173d71a13931d50)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146630
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit efbf1fad61882a52e92b9c4d9d277a5e8c7750ab)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146711
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>